--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Review Form Assignment">
+    <meta name="author" content="Reese Blignaut">
     <title>Product Review Form</title>
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer></script>
@@ -30,10 +32,10 @@
                     <legend>Overall Rating</legend>
                     <input type="radio" id="star5" name="rating" value="5" required><label for="star5"
                         title="5 stars">☆</label>
-                    <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="4 stars">☆</label>
-                    <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="3 stars">☆</label>
-                    <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars">☆</label>
-                    <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star">☆</label>
+                    <input type="radio" id="star4" name="rating" value="4" required><label for="star4" title="4 stars">☆</label>
+                    <input type="radio" id="star3" name="rating" value="3" required><label for="star3" title="3 stars">☆</label>
+                    <input type="radio" id="star2" name="rating" value="2" required><label for="star2" title="2 stars">☆</label>
+                    <input type="radio" id="star1" name="rating" value="1" required><label for="star1" title="1 star">☆</label>
                 </fieldset>
             </div>
 
